--- a/config/locales/views/admin/ka.yml
+++ b/config/locales/views/admin/ka.yml
@@ -3,3 +3,9 @@ ka:
   admin:
     index:
       title: ადმინის სექცია
+    page_contents:
+      show:
+        title: '%{label}: %{label_value}'
+    categories:
+      show:
+        title: '%{label}: %{label_value}'
