--- a/config/locales/models/category/en.yml
+++ b/config/locales/models/category/en.yml
@@ -5,7 +5,9 @@ en:
       category:
         title: Title
         description: Description
-        is_active: Is Active?
+        is_active: Is Public?
+        experiment_ids: Experiments
+        color_hex: Color
     models:
       category:
         one: Category
