--- a/config/locales/views/application/ka.yml
+++ b/config/locales/views/application/ka.yml
@@ -2,9 +2,7 @@
 ka:
   application:
     navbar_header:
-      about: "პროექტის შესახებ"
+      about: About
       account:
         edit_profile: პროფილის შეცვლა
         logout: გასვლა
-      link1: "ლინკი 1"
-      link2: "ლინკი 2"
