add category images; add template images

--- a/config/locales/models/category/ka.yml
+++ b/config/locales/models/category/ka.yml
@@ -8,6 +8,7 @@ ka:
         is_active: Is Public?
         experiment_ids: Experiments
         color_hex: Color
+        logo: Logo
     models:
       category:
         one: Category
