--- a/config/locales/models/category/en.yml
+++ b/config/locales/models/category/en.yml
@@ -8,6 +8,7 @@ en:
         is_active: Is Public?
         experiment_ids: Experiments
         color_hex: Color
+        logo: Logo
     models:
       category:
         one: Category
