--- a/config/locales/models/ingredient/ka.yml
+++ b/config/locales/models/ingredient/ka.yml
@@ -3,9 +3,9 @@ ka:
   activerecord:
     attributes:
       ingredient:
-        content: Text
-        sort_order: Sort Order
+        content: ტექსტი
+        sort_order: თანმიმდევრობის რედაქტირება
     models:
       ingredient:
-        one: Ingredient
-        other: Ingredients
+        one: ინგრედიენტი
+        other: ინგრედიენტები
