moved text on home page to locale

--- a/config/locales/shared/ka.yml
+++ b/config/locales/shared/ka.yml
@@ -23,7 +23,7 @@ ka:
       jumpstart:
         slogan: JumpStart Georgia - ჩვენ გაწვდით ინფორმაციას მონაცემებით და დიზაინით
       name: მეწნიერი.მე
-      description: This is a description of the project that will appear in the meta tags.
+      description: ექსპერიმენტები განკუთვნილია 12 წლამდე ასაკის ბავშვებისთვის. სცადე, მარტივია!
       no_experiments: At this time there are no experiments on file.
       no_experiments_match: No experiments match your search request.
       search: Search Experiments
