--- a/config/locales/views/root/ka.yml
+++ b/config/locales/views/root/ka.yml
@@ -1,6 +1,8 @@
 ---
 ka:
   root:
+    index:
+      about: ექსპერიმენტები განკუთვნილია<br />12 წლამდე ასაკის ბავშვებისთვის.<br /><strong>სცადე, მარტივია!</strong>
     about:
       title: ამის შესახებ
     experiments:
