re-arranged exp form fields; added missing formtastic locales

--- a/config/locales/models/experiment/ka.yml
+++ b/config/locales/models/experiment/ka.yml
@@ -3,6 +3,7 @@ ka:
   activerecord:
     attributes:
       experiment:
+        title: სათაური
         intro: შესავალი
         explanation: აღწერა
         warning: გაფრთხილება
