--- a/config/locales/shared/ka.yml
+++ b/config/locales/shared/ka.yml
@@ -27,6 +27,8 @@ ka:
       no_experiments: ამ დროისთვის ფაილში არ მოიძებნა არცერთი ექსპერიმენტი.
       no_experiments_match: ძიების შედეგად ექსპერიმენტი ვერ მოიძებნა.
       search: ექსპერიმენტების მოძებნა
+      'no': არა
+      'yes': დიახ
     links:
       page_contents: გვერდის ტექსტის რედაქტირება
       admin: ადმინის სექცია
