--- a/config/locales/shared/ka.yml
+++ b/config/locales/shared/ka.yml
@@ -8,6 +8,7 @@ ka:
       log_in: შესვლა
       view: ნახვა
       add: დამატება
+      more: More
       with_obj:
         cancel: "%{obj}-ის გაუქმება"
         create: "%{obj}-ის შექმნა"
