--- a/config/locales/views/root/en.yml
+++ b/config/locales/views/root/en.yml
@@ -3,6 +3,7 @@ en:
   root:
     index:
       about: ექსპერიმენტები განკუთვნილია<br />12 წლამდე ასაკის ბავშვებისთვის.<br /><strong>სცადე, მარტივია!</strong>
+      discover: აღმოაჩინე მეცნიერი!
     about:
       title: About
     experiments:
