--- a/config/locales/shared/ka.yml
+++ b/config/locales/shared/ka.yml
@@ -27,7 +27,7 @@ ka:
       description: ექსპერიმენტები განკუთვნილია 12 წლამდე ასაკის ბავშვებისთვის. სცადე, მარტივია!
       no_experiments: ამ დროისთვის ფაილში არ მოიძებნა არცერთი ექსპერიმენტი.
       no_experiments_match: ძიების შედეგად ექსპერიმენტი ვერ მოიძებნა.
-      search: ექსპერიმენტების მოძებნა
+      search: ძიება
     links:
       page_contents: გვერდის ტექსტის რედაქტირება
       admin: ადმინის სექცია
