added cat label to exp page

--- a/config/locales/views/root/ka.yml
+++ b/config/locales/views/root/ka.yml
@@ -8,3 +8,6 @@ ka:
       title: ამის შესახებ
     experiments:
       title: ექსპერიმენტები
+  shared:
+    experiment_show:
+      category_label: კატეგორია
