use category placeholder images when none exist; added exp ingredient image field

--- a/config/locales/models/experiment/en.yml
+++ b/config/locales/models/experiment/en.yml
@@ -15,6 +15,7 @@ en:
         thumbnail1: Initial Thumbnail
         thumbnail2: Hover Thumbnail
         thumbnails: Thumbnail Images
+        ingredient_image: Ingredient Image
     models:
       experiment:
         one: Experiment
