--- a/config/locales/views/root/ka.yml
+++ b/config/locales/views/root/ka.yml
@@ -3,7 +3,7 @@ ka:
   root:
     index:
       about: ექსპერიმენტები განკუთვნილია<br />12 წლამდე ასაკის ბავშვებისთვის.<br /><strong>სცადე, მარტივია!</strong>
-      discover: აღმოაჩინე მეცნიერი!
+      discover: აღმოაჩინე შენში მეცნიერი!
     about:
       title: ამის შესახებ
     experiments:
