experiment page load more fix

--- a/config/locales/views/root/ka.yml
+++ b/config/locales/views/root/ka.yml
@@ -14,3 +14,5 @@ ka:
   shared:
     experiment_show:
       category_label: კატეგორია
+      adult_supervision: საჭიროებს მშობლის მეთვალყურეობას!
+
