about page and navigation bar update

--- a/config/locales/views/application/en.yml
+++ b/config/locales/views/application/en.yml
@@ -3,6 +3,7 @@ en:
   application:
     navbar_header:
       about: About
+      categories: Categories
       account:
         edit_profile: Edit Profile
         logout: Logout
