--- a/config/locales/views/root/ka.yml
+++ b/config/locales/views/root/ka.yml
@@ -6,6 +6,13 @@ ka:
       discover: აღმოაჩინე შენში მეცნიერი!
     about:
       title: ამის შესახებ
+      text: |
+        Metsnieri.me არის ვებ-გვერდი, რომლის მიზანია, შექმნას სახლში მარტივად ჩასატარებელი სამეცნიერო ექსპერიმენტები ქართველი ბავშვებისთვისა და თინეიჯერებისთვის.
+        
+        დაბალ ბიუჯეტიანი ექსპერიმენტები მიზნად ისახავს  თქვენი ცოდნის გაღრმავებას ისეთ სფეროებში, როგორიცაა ასტრონომია, გეოლოგია, მეტეოროლოგია, კომპიუტერული მეცნიერებები, ფიზიკა, მათემატიკა და ინჟინერია.
+        
+        მოირგე მეცნიერის როლი, ჩაატარე ექსპერიმენტები და გაიგე მეტი იმის შესახებ, თუ რა ადგილი უკავია მეცნიერებას შენს ყოველდღიურ ცხოვრებაში.
+      funding: პროექტი დაფინანსებულია საქართველოში აშშ-ის საელჩოს დემოკრატიის ხელშეწყობის პროგრამის ფარგლებში
     experiments:
       title: ექსპერიმენტები
     experiment:
