--- a/config/locales/views/root/en.yml
+++ b/config/locales/views/root/en.yml
@@ -15,3 +15,5 @@ en:
     experiment_show:
       category_label: Category
       adult_supervision: Needs adult supervision!
+      next_exp: Next Exp
+      previous_exp: Previous Exp
