Update about page

--- a/config/locales/views/root/ka.yml
+++ b/config/locales/views/root/ka.yml
@@ -5,7 +5,7 @@ ka:
       about: ექსპერიმენტები განკუთვნილია<br />12 წლამდე ასაკის ბავშვებისთვის.<br /><strong>სცადე, მარტივია!</strong>
       discover: აღმოაჩინე შენში მეცნიერი!
     about:
-      title: ამის შესახებ
+      title: შესახებ
       text: |
         Metsnieri.me არის ვებ-გვერდი, რომლის მიზანია, შექმნას სახლში მარტივად ჩასატარებელი სამეცნიერო ექსპერიმენტები ქართველი ბავშვებისთვისა და თინეიჯერებისთვის.
         
