Change metsnieri to mecnieri on about page

--- a/config/locales/shared/ka.yml
+++ b/config/locales/shared/ka.yml
@@ -24,7 +24,7 @@ ka:
       jumpstart:
         slogan: JumpStart Georgia - ჩვენ გაწვდით ინფორმაციას მონაცემებით და დიზაინით
       name: მეცნიერი.მე
-      description: Metsnieri.me არის ვებ-გვერდი, რომლის მიზანია, შექმნას სახლში მარტივად ჩასატარებელი სამეცნიერო ექსპერიმენტები ქართველი ბავშვებისთვისა და თინეიჯერებისთვის. დაბალ ბიუჯეტიანი ექსპერიმენტები მიზნად ისახავს თქვენი ცოდნის გაღრმავებას ისეთ სფეროებში, როგორიცაა ასტრონომია, გეოლოგია, მეტეოროლოგია, კომპიუტერული მეცნიერებები, ფიზიკა, მათემატიკა და ინჟინერია. მოირგე მეცნიერის როლი, ჩაატარე ექსპერიმენტები და გაიგე მეტი იმის შესახებ, თუ რა ადგილი უკავია მეცნიერებას შენს ყოველდღიურ ცხოვრებაში.
+      description: Mecnieri.me არის ვებ-გვერდი, რომლის მიზანია, შექმნას სახლში მარტივად ჩასატარებელი სამეცნიერო ექსპერიმენტები ქართველი ბავშვებისთვისა და თინეიჯერებისთვის. დაბალ ბიუჯეტიანი ექსპერიმენტები მიზნად ისახავს თქვენი ცოდნის გაღრმავებას ისეთ სფეროებში, როგორიცაა ასტრონომია, გეოლოგია, მეტეოროლოგია, კომპიუტერული მეცნიერებები, ფიზიკა, მათემატიკა და ინჟინერია. მოირგე მეცნიერის როლი, ჩაატარე ექსპერიმენტები და გაიგე მეტი იმის შესახებ, თუ რა ადგილი უკავია მეცნიერებას შენს ყოველდღიურ ცხოვრებაში.
       no_experiments: ამ დროისთვის ფაილში არ მოიძებნა არცერთი ექსპერიმენტი.
       no_experiments_match: ძიების შედეგად ექსპერიმენტი ვერ მოიძებნა.
       search: ძიება
