--- a/config/locales/views/root/ka.yml
+++ b/config/locales/views/root/ka.yml
@@ -7,7 +7,7 @@ ka:
     about:
       title: შესახებ
       text: |
-        Metsnieri.me არის ვებ-გვერდი, რომლის მიზანია, შექმნას სახლში მარტივად ჩასატარებელი სამეცნიერო ექსპერიმენტები ქართველი ბავშვებისთვისა და თინეიჯერებისთვის.
+        Mecnieri.me არის ვებ-გვერდი, რომლის მიზანია, შექმნას სახლში მარტივად ჩასატარებელი სამეცნიერო ექსპერიმენტები ქართველი ბავშვებისთვისა და თინეიჯერებისთვის.
         
         დაბალ ბიუჯეტიანი ექსპერიმენტები მიზნად ისახავს  თქვენი ცოდნის გაღრმავებას ისეთ სფეროებში, როგორიცაა ასტრონომია, გეოლოგია, მეტეოროლოგია, კომპიუტერული მეცნიერებები, ფიზიკა, მათემატიკა და ინჟინერია.
         
